# hortelan-backend

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-bugfix-pr.yml  auto-security-pr.yml  cicd.yml  security-hardening.yml
app/: main.py
app/api/: error_handlers.py  routes.py  schemas.py
app/api/contracts/: __init__.py  commands.py  devices.py  ledger.py  strategic_coverage.py  telemetry.py
app/application/services/: __init__.py  coverage_service.py
app/application/use_cases/: dispatch_command.py  ingest_telemetry.py  register_ledger.py
app/core/: circuit_breaker.py  dependencies.py  exceptions.py  observability.py  security.py  settings.py
app/domain/entities/: models.py
app/domain/ports/: interfaces.py
app/infrastructure/adapters/: aws_iot_adapter.py  kafka_adapter.py  redis_adapter.py  web3_adapter.py
docs/: backend-frontend-compatibility-audit.md  cicd.md  code-review-clean-code-solid-hexagonal.md  full-application-review.md  performance-plan.md  strategic-feature-gap-analysis.md  technical-refactor-aws-backend-review.md
scripts/: perf_baseline.py
tests/: test_circuit_breaker.py  test_device_and_telemetry_routes.py  test_dispatch_and_ledger_use_cases.py  test_error_handlers.py  test_ingest_use_case.py  test_latest_endpoints_contract.py  test_observability.py  test_product_readiness.py  test_requirements_catalog.py  test_security.py  test_strategic_coverage.py
(+10 files in other folders)
